# AnDICT-Android

./: .gitignore  AndroidManifest.xml  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/savanto/andict/: DatabasePreference.java  DefineTask.java  Definition.java  DefinitionFormatter.java  DictActivity.java  DictAdapter.java  DictSettingsActivity.java  Entity.java  NativeDict.java  PortPreference.java  RemoteEntityPreference.java  StrategyPreference.java
app/src/main/res/drawable/: divider.xml
app/src/main/res/layout/: database_preference.xml  definition.xml  entity_choice.xml  main.xml  port_preference.xml  remote_entity_preference.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: settings.xml
res/layout/: main.xml  port_preference.xml
res/menu/: menu.xml
res/values/: attrs.xml  integers.xml  strings.xml  styles.xml
res/values-v11/: styles.xml
res/values-v14/: styles.xml
res/xml/: settings.xml
rust/: .gitignore  Cargo.toml  build.sh
rust/src/: lib.rs
src/com/savanto/andict/: DefineTask.java  DictActivity.java  DictParser.java  DictSettingsActivity.java  PortPreference.java
