[package]
name = "android-ffi"
version = "0.1.0"
publish = false
edition = "2018"

[lib]
crate-type = ["dylib"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.11.0", default-features = false }
dictp = { git = "https://gitlab.com/savanto/dictp.rs.git", tag = "v0.3.3" }

[profile.release]
lto = true
panic = "abort"
